ingress-blue-green/manifest-service-prod-green.yaml
apiVersion: v1
kind: Service
metadata: 
  name: prod-green-service
  labels:
    app: hello-kube
  namespace: prod
spec: 
  ports: 
    - 
      nodePort: 32057
      port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: NodePort
  selector:
    app: hello-kube
    version: v2
