ingress-blue-green/manifest-service-prod-update.yaml
apiVersion: v1
kind: Service
metadata: 
  name: prod-service
  labels:
    app: hello-kube
    version: v2
    env: prod
  namespace: prod
spec: 
  ports: 
    - 
      nodePort: 32056
      port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: NodePort
  selector:
    app: hello-kube
    version: v2
