ingress-blue-green/manifest-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-kube.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-service
                port:
                  number: 8080
          - path: /
            backend:
               service:
                 name: dev-test-service
                 port:
                   number: 8080
